# aruco-vision

./: .gitignore  CMakeLists.txt
markers/: CreateMarkerImage
src/: Controller.cpp  Controller.h  Detector.cpp  Detector.h  GrabBaslerImages.cpp  GrabBaslerImages.h  Tracker.cpp  Tracker.h  capture_basler.cpp  capture_basler.h  colors.h  createChessBoard.cpp  createMarkerImage.cpp  main.cpp  rawimage.h
src/aruco/: calibration.cpp  createMarkerImage.cpp
src/capture/: capture_basler.cpp  capture_basler.h
src/utils/: PosRotId.cpp  colors.h
